ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/AI_Last_Analyzed__c.field-meta.xml
<CustomField>
    <fullName>AI_Last_Analyzed__c</fullName>
    <description>Timestamp of the last risk/AI recommendation refresh.</description>
    <label>AI Last Analyzed</label>
    <type>DateTime</type>
</CustomField>