ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/AI_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Summary__c</fullName>
    <description>AI-generated narrative summary of the deal, refreshed by AIRecommendationService.</description>
    <label>AI Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>