ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/Competitor_Insights__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Insights__c</fullName>
    <description>AI-generated notes on competitive threats mentioned in activity history.</description>
    <label>Competitor Insights</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>