ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/Next_Best_Action__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Action__c</fullName>
    <description>AI-suggested next action for the deal owner.</description>
    <label>Next Best Action</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>