ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/Revenue_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Forecast__c</fullName>
    <description>AI-weighted revenue forecast for the deal (amount x confidence).</description>
    <label>Revenue Forecast</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>