ai-sales-assistant/force-app/main/default/objects/Opportunity/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>AI-computed deal risk score from 0 (healthy) to 100 (highest risk).</description>
    <label>Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>